--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.1",
+    "@vueuse/core": "^11.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.427.0",
@@ -23,6 +24,9 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@iconify-json/radix-icons": "^1.1.15",
+    "@iconify/vue": "^4.1.2",
+    "@nuxtjs/color-mode": "^3.4.2",
     "@nuxtjs/tailwindcss": "^6.12.1"
   }
 }
